--- a/static/styles.css
+++ b/static/styles.css
@@ -78,11 +78,28 @@ body {
     margin-bottom: 2rem;
     padding: 1rem 1rem;
     text-align: center;
-    background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url('/static/asset/images/other/BG.mp4');
+    background: transparent;
     filter: grayscale(50%);
     background-size: 75vh 30vh;
     background-repeat: no-repeat;
     background-position: center
+}
+
+#video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+#background-video {
+    width: 60%;
+    height: auto; /* Maintain aspect ratio */
+    max-height: 70%;
+    border-radius: 10px; /* Optional: Add rounded corners */
 }
 
 ::placeholder {
