--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,13 @@
                 <a class="nav-item" href="client"> Commissions </a>
             </div>
         </nav>
-          
+        
+        <div id="video-container">
+            <video autoplay muted loop id="background-video">
+                <source src="/static/asset/images/other/BG.mp4" type="video/mp4">
+            </video>
+        </div>
+
         <form method="POST">
             <input autocomplete="off" type="text" class="header" id="newtodo" placeholder="Pirenily" name="finder">
         </form>
