--- a/templates/personal.html
+++ b/templates/personal.html
@@ -57,7 +57,7 @@
             <div class="thumbnail-content">
                 <a class="thumbnail-header" href="afvs">Coding and Interactivity</a>
                 <div class="thumbnail-description">
-                    Self-expression through the art of coding
+                    Self-expression through the art of coding. Press a key to see how the face reacts.
                 </div>
                 <div class="thumbnail-description" style="color:#bbb;">
                     Ongoing
