--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -14,7 +14,7 @@
     let w = 750;
     let h = 300;
     let counter = 0;
-    let textArray = ["Cute", "What\nthey\ndoing?", "Ew", "That's\nnot it...", "YES", "HELP"];
+    let textArray = ["Cute", "What\nthey\ndoing?", "Ew", "That's\nnot it...", "YES", "HELP", "Actually...", "BYE!", "tsk,\ntsk", "Ủa alo", "Im", "Thôi", "Để\nyên!", "Ơ hay", "Kinh\nvãi"];
 
     function setup() {
         let canvas = createCanvas(1000, 600);
@@ -89,5 +89,5 @@
     }
 </script>
 
-<div class="spacer" style="padding-bottom: 10rem;"> </div>
+<div class="spacer" style="padding-bottom: 77.5rem;"> </div>
 {% endblock %}
