--- a/static/styles.css
+++ b/static/styles.css
@@ -89,9 +89,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+    width: 95vw;
+    height: 95vh;
+    position: fixed;
     overflow: hidden;
     z-index: -1;
 }
@@ -101,7 +101,8 @@ body {
     height: auto;
     max-height: 70%;
     padding-bottom: 10%;
-    filter: grayscale(100%);
+    z-index:-1;
+    filter: grayscale(50%);
 }
 
 ::placeholder {
