--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -14,7 +14,7 @@
     let w = 750;
     let h = 300;
     let counter = 0;
-    let textArray = ["Cute", "What\nthey\ndoing?", "Ew", "That's\nnot it...", "YES", "HELP", "Actually...", "BYE!", "tsk,\ntsk", "Ủa alo", "Im", "Thôi", "Để\nyên!", "Ơ hay", "Kinh\nvãi"];
+    let textArray = ["Cute", "What\nthey\ndoing?", "Ew", "That's\nnot it...", "YES", "HELP", "Actually...", "BYE!", "tsk,\ntsk", "Ủa alo", "Im", "Thôi", "Để\nyên!", "Ơ hay", "Kinh\nvãi", "BYEEEE", "Chịu\nluôn", "Chillax"];
 
     function setup() {
         let canvas = createCanvas(1000, 600);
