--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -6,8 +6,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
 
 <div id="sketch-container"></div>
-
-<script>
+<!-- Import the script from Processing -->
+<script> 
     let c = 0;
     let f;
     let d = 710;
