--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Pirenily {% block title %}{% endblock %}</title>
+        <!-- Import necessary fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Caslon+Display&display=swap" rel="stylesheet">
@@ -39,6 +40,7 @@
         </footer>
 
         <script>
+            // Script for the loader to load on every new page for at least 0.4s
             document.addEventListener("DOMContentLoaded", () => {
                 const loader = document.querySelector('.loader-container');
 
