--- a/templates/recit.html
+++ b/templates/recit.html
@@ -5,6 +5,7 @@
 {% block content %}
     <div class="bio-container">
 
+        <!-- Embedded film on the left -->
         <iframe class="video" src="https://drive.google.com/file/d/1CsplL9OtJk5-JYb_Mf8M-UASSZJsbVxD/preview" width="640" height="480" allow="autoplay"></iframe>
         <div class="bio-text" style="text-align:left;">
             <h2>WITHIN THE UNSEEN DREAM.</h2>
@@ -21,6 +22,7 @@
     </div>
 {% endblock %}
 {% block footer %}
+<!-- Contact information for the studio -->
     <a href="https://www.instagram.com/recit.stu/" target="_blank" style="text-decoration: none">
         <img src="../static/asset/images/other/ig.png" alt="Instagram" class="contact-logo">
     </a>
