--- a/templates/about.html
+++ b/templates/about.html
@@ -49,6 +49,7 @@
         });
     </script>
     <div class="bio-container">
+        <!-- Picture on the left side -->
         <img class="bio-image" src="../static/asset/images/other/Headshot_Chi Le.jpg" alt="biopic">
         <div class="bio-text">
             <h2>My name is Lê Tuệ Chi or Chi Le.</h2>
@@ -64,7 +65,8 @@
                 I am currently a freshman at Harvard College with undecided major declaration, but I am mainly looking into a concentration in <a href="https://seas.harvard.edu/electrical-engineering/bachelors-degree-electrical-engineering">Computer and Electrical Engineering</a> and a secondary in <a href="https://afvs.fas.harvard.edu/undergraduate-secondary-field">Art, Film, and Visual Studies</a>. I am a part of <a href="https://hudc.carrd.co/">Harvard Undergraduate Design Collectives</a> and <a href="https://www.hcapconference.org/">Harvard Undergraduate in Asia Program</a>.
             </p>
         </div>
-        <div class="image-container">
+        <!-- Pictures on the right side -->
+        <div class="image-container"> 
             <div class="image" style="background-image: url('../static/asset/images/self/blackswan.jpg');"></div>
             <div class="image" style="background-image: url('../static/asset/images/self/glasses.jpg');"></div>
             <div class="image" style="background-image: url('../static/asset/images/self/rebel.jpg');"></div>
@@ -79,6 +81,7 @@
 {% endblock %}
 
 {% block footer %}
+<!-- Contact information -->
     <a href="https://www.instagram.com/pju_irza/" target="_blank" style="text-decoration: none">
         <img src="../static/asset/images/other/ig.png" alt="Instagram" class="contact-logo">
     </a>
