--- a/static/styles.css
+++ b/static/styles.css
@@ -584,6 +584,10 @@ footer {
         /* Adjust background size */
     }
 
+    .thumbnail {
+        padding-bottom: 3rem;
+    }
+
     .thumbnail img {
         width: 200px;
         /* Reduce thumbnail size */
@@ -639,6 +643,7 @@ footer {
         flex-direction: column;
         /* Stack thumbnails vertically */
         align-items: center;
+        padding-bottom: 2rem;
     }
 
     .thumbnail img {
