--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,7 @@
             <video autoplay muted loop id="background-video">
                 <source src="/static/asset/images/other/BG.mp4" type="video/mp4">
             </video>
+            <img id="image-static" src="/static/asset/images/other/homebackground.jpg" alt="Background Image">
         </div>
 
         <form method="POST">
