--- a/static/styles.css
+++ b/static/styles.css
@@ -105,10 +105,18 @@ body {
     filter: grayscale(50%);
 }
 
+#image-static {
+    display: none;
+    width: 60%;
+    max-height: 70%;
+    padding-bottom: 10%;
+    z-index: -1;
+    filter: grayscale(100%) brightness(0.75);
+}
+
 ::placeholder {
     color: white;
     opacity: 1;
-    /* Firefox */
 }
 
 *::selection {
@@ -137,7 +145,6 @@ body {
     text-decoration: none;
     -webkit-filter: grayscale(100%);
     text-decoration: none;
-    /* Safari 6.0 - 9.0 */
 }
 
 .contact-logo:hover {
@@ -145,6 +152,7 @@ body {
     opacity: 0.8;
 }
 
+/* Designs the About page */
 .bio-container {
     background-repeat: no-repeat;
     background-size: 10rem auto;
@@ -160,16 +168,10 @@ body {
     gap: 2rem;
     /* Adds space between the image and text */
     padding: 5rem;
-}
-
-/* General container styling */
-.bio-container {
     position: relative;
-    padding: 2rem;
     text-align: center;
 }
 
-/* Text section styling */
 .bio-text {
     margin-bottom: 2rem;
     z-index: 2;
@@ -280,14 +282,6 @@ body {
     left: 600px;
 }
 
-/* Hover effect */
-/* General bio-container styling */
-.bio-container {
-    padding: 2rem;
-    text-align: center;
-}
-
-/* Text section styling */
 .bio-text {
     margin-bottom: 2rem;
 }
@@ -328,6 +322,7 @@ body {
 
 .bio-image:hover {
     animation: grayscaleTransition 2s infinite alternate;
+    transform: scale(1.05);
 }
 
 @keyframes grayscaleTransition {
@@ -365,7 +360,7 @@ body {
     color: #888;
 }
 
-
+/* Foter section design */
 footer {
     font-family: "Crimson Text", serif;
     font-weight: 800;
@@ -453,11 +448,8 @@ footer {
 
 .item img:hover {
     transform: scale(1.05);
-    /* Slight zoom effect */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    /* Shadow on hover */
 }
-
 
 /* Lightbox Overlay Styling */
 .lightbox-overlay {
@@ -603,6 +595,14 @@ footer {
         font-size: 1rem;
         padding: 2rem;
     }
+
+    #background-video {
+        display: none;
+    }
+
+    #image-static {
+        display: block;
+    }
 }
 
 /* ===== Mobile Styles ===== */
@@ -670,5 +670,13 @@ footer {
         /* Smaller footer text */
         padding-top: 1rem;
         padding-bottom: 1rem;
+    }
+    
+    #background-video {
+        display: none;
+    }
+
+    #image-static {
+        display: block;
     }
 }
