--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,7 @@
 {% block title %}| Meet Chi{% endblock %}
 
 {% block content %}
+    <!--- Navigation page for personal information --->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const images = document.querySelectorAll('.image');
