--- a/templates/olympics.html
+++ b/templates/olympics.html
@@ -3,6 +3,7 @@
 {% block title %}| Commissions{% endblock %}
 
 {% block content %}
+    <!--- Subnavigation page for displaying project --->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const loader = document.querySelector('.loader-container');
