--- a/templates/recit.html
+++ b/templates/recit.html
@@ -3,6 +3,7 @@
 {% block title %}| Collaboration{% endblock %}
 
 {% block content %}
+    <!--- Subnavigation page for displaying project --->
     <div class="bio-container">
 
         <!-- Embedded film on the left -->
