--- a/templates/client.html
+++ b/templates/client.html
@@ -3,7 +3,7 @@
 {% block title %}| Commissions{% endblock %}
 
 {% block content %}
-
+    <!--- Navigation page for displaying client work --->
     <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white">Client Work</h1>
     <div class="thumbnail-container">
         <div class="thumbnail">
@@ -49,4 +49,5 @@
     </div>
 
 {% endblock %}
+<!--- Additional footer detail --->
 {% block footer%} <a class="com-footer" style="text-decoration: none; color: #888" href="about">Commission me now!</a> {%endblock%}
