--- a/templates/collab.html
+++ b/templates/collab.html
@@ -3,6 +3,7 @@
 {% block title %}| Collaborations{% endblock %}
 
 {% block content %}
+    <!--- Navigation page for displaying collaborative work --->
     <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white">Collaborations</h1>
     <div class="thumbnail-container">
         <div class="thumbnail">
