--- a/static/styles.css
+++ b/static/styles.css
@@ -21,7 +21,7 @@ body {
     font-size: 1.5rem;
     position: sticky;
     top: 0;
-    background-image: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0));
+    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     z-index: 999;
 }
 
@@ -102,7 +102,7 @@ body {
     height: auto;
     max-height: 70%;
     padding-bottom: 10%;
-    z-index:-1;
+    z-index: -1;
     filter: grayscale(50%);
 }
 
@@ -200,7 +200,7 @@ body {
 .com-footer:hover {
     background: linear-gradient(45deg, #1ca591, #fff, #1ca591);
     background-size: 200%;
-    background-clip:text;
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: gradientHover 2s infinite linear;
@@ -211,6 +211,7 @@ body {
     0% {
         background-position: 0%;
     }
+
     100% {
         background-position: 100%;
     }
@@ -324,6 +325,7 @@ body {
     from {
         filter: grayscale(100%);
     }
+
     to {
         filter: grayscale(25%);
     }
@@ -461,6 +463,7 @@ footer {
     max-height: 90%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
+
 /* Button Styling */
 .close-btn {
     position: absolute;
