--- a/static/styles.css
+++ b/static/styles.css
@@ -524,7 +524,7 @@ footer {
 /* ===== Style Changes on Smaller Screen ===== */
 
 /* ===== Tablet Styles ===== */
-@media (min-width: 1200px) {
+@media (min-width: 600px) {
     .masonry {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -580,7 +580,7 @@ footer {
 }
 
 /* ===== Mobile Styles ===== */
-@media (min-width: 576px) {
+@media (max-width: 600px) {
     .masonry {
         grid-template-columns: 1fr;
         gap: 0.5rem;
