try for the computer first

--- a/static/styles.css
+++ b/static/styles.css
@@ -585,6 +585,7 @@ footer {
         grid-template-columns: 1fr;
         gap: 0.5rem;
     }
+    
     .navigator {
         font-size: 3rem;
     }
@@ -599,6 +600,7 @@ footer {
     }
 
     .bio-container {
+        flex-direction: column;
         padding: 1rem;
     }
 
