--- a/templates/client.html
+++ b/templates/client.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!--- Navigation page for displaying client work --->
-    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white">Client Work</h1>
+    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white; font-size: 5vw">Client Work</h1>
     <div class="thumbnail-container">
         <div class="thumbnail">
             <img src="../static/asset/images/client/olympics.png" alt="CNN Olympics">
@@ -50,4 +50,4 @@
 
 {% endblock %}
 <!--- Additional footer detail --->
-{% block footer%} <a class="com-footer" style="text-decoration: none; color: #888" href="about">Commission me now!</a> {%endblock%}
+{% block footer%} <a class="com-footer" style="text-decoration: none; color: #888" href="about">Commission me on Instagram!</a> {%endblock%}
