--- a/templates/collab.html
+++ b/templates/collab.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!--- Navigation page for displaying collaborative work --->
-    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white">Collaborations</h1>
+    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white; font-size: 5vw">Collaborations</h1>
     <div class="thumbnail-container">
         <div class="thumbnail">
             <img src="../static/asset/images/art direction/recit.jpg" alt="Recit" style="height: 300px;">
