--- a/templates/personal.html
+++ b/templates/personal.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!--- Subnavigation page for displaying photography --->
-    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white">Personal Work</h1>
+    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white; font-size: 5vw">Personal Work</h1>
     <div class="thumbnail-container">
         <div class="thumbnail">
             <div class="thumbnail-content">
