--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
     <body>
         <nav>
-            <div class="nav-item-big" align="center" grid-template-columns=0>
+            <div class="nav-item-big" align="center">
                 <a class="nav-item" href="about"> About </a>
                 <a class="nav-item" href="collab"> Collaborative Work </a>
                 <a class="nav-item" href="personal"> Personal Work </a>
