--- a/static/styles.css
+++ b/static/styles.css
@@ -115,7 +115,7 @@ body {
 }
 
 *::selection {
-    color: #ddd;
+    color: #1ca591;
     text-shadow: 0px 0px 5px rgba(255, 255, 255, 1.5);
     background-color: transparent;
 }
@@ -133,12 +133,13 @@ body {
 .contact-logo {
     text-decoration: none;
     color: white;
-    width: 2rem;
-    height: auto;
+    height: 1.5rem;
+    width: auto;
     opacity: 0.5;
     transition: opacity 0.3s;
-    text-decoration: none;
     filter: grayscale(100%);
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
     -webkit-filter: grayscale(100%);
     text-decoration: none;
 }
@@ -321,7 +322,7 @@ body {
 
 .bio-image:hover {
     animation: grayscaleTransition 1s infinite alternate;
-    box-shadow: -0.25rem 0.25rem 0.5rem 0.05rem rgba(255, 255, 255, 0.25)
+    box-shadow: -0.25rem 0.25rem 0.5rem 0.05rem #1ca591)
 }
 
 @keyframes grayscaleTransition {
@@ -608,7 +609,8 @@ footer {
 
     .nav-header {
         padding: 1rem;
-        font-size: 4vw;
+        font-size: 5vw;
+        margin: auto;
     }
 
     .nav-item-big{
@@ -654,7 +656,7 @@ footer {
     }
 
     .nav-header {
-        font-size: 1rem;
+        font-size: 5vw;
         padding: 2rem;
     }
 
