--- a/templates/collab.html
+++ b/templates/collab.html
@@ -23,7 +23,7 @@
         <div class="thumbnail">
             <img src="../static/asset/images/art direction/ivmun.jpg" alt="CEC" style="height: 300px;">
             <div class="thumbnail-content">
-                <a class="thumbnail-header" href="https://ivmun.org/">International Vietnam Model United Nations</a>
+                <a class="thumbnail-header" href="https://www.facebook.com/official.ivmun">International Vietnam Model United Nations</a>
                 <div class="thumbnail-description">
                     Biggest Model UN in Vietnam with annual conference participation up to 1000 people of many countries besides Vietnam
                 </div>
