--- a/templates/personal.html
+++ b/templates/personal.html
@@ -64,6 +64,28 @@
                 </div>
             </div>
         </div>
+        <div class="thumbnail">
+            <div class="thumbnail-content">
+                <a class="thumbnail-header" href="fysemr">The land of rivers: An imagined tea garden</a>
+                <div class="thumbnail-description">
+                    Final project for FYSEMR 65R: Tea in Japan/America. Assigned a little bit over a month to create a my dream (fictional or not) tea garden. Created with Clip Studio Paint and Adobe Indesign.
+                </div>
+                <div class="thumbnail-description" style="color:#bbb;">
+                    December 2024
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-content">
+                <a class="thumbnail-header" href="afvs">Water Lilies (2007): A video essay</a>
+                <div class="thumbnail-description">
+                    Final project for Expository Writing 20: Queer Coming-of-Age Stories, where I explore a different view (is this pun?) on the gazes in Water Lilies - a 2007 film by Céline Sciamma.
+                </div>
+                <div class="thumbnail-description" style="color:#bbb;">
+                    May 2025
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
