--- a/templates/superface.html
+++ b/templates/superface.html
@@ -86,8 +86,8 @@
             </a>
         </div>
         <div class="item">
-            <a href="../static/asset/images/self/3C.jpg" class="lightbox">
-                <img src="../static/asset/images/self/3C.jpg" alt="3C">
+            <a href="../static/asset/images/self/3C.png" class="lightbox">
+                <img src="../static/asset/images/self/3C.png" alt="3C">
             </a>
         </div>
 
