some more pages

--- a/templates/personal.html
+++ b/templates/personal.html
@@ -77,9 +77,9 @@
         </div>
         <div class="thumbnail">
             <div class="thumbnail-content">
-                <a class="thumbnail-header" href="afvs">Water Lilies (2007): A video essay</a>
+                <a class="thumbnail-header" href="afvs">(A) video essay(s)</a>
                 <div class="thumbnail-description">
-                    Final project for Expository Writing 20: Queer Coming-of-Age Stories, where I explore a different view (is this pun?) on the gazes in Water Lilies - a 2007 film by Céline Sciamma.
+                    A list of possible video essays I might create (there has been a starting point and I want to do a lot more)!
                 </div>
                 <div class="thumbnail-description" style="color:#bbb;">
                     May 2025
