--- a/templates/personal.html
+++ b/templates/personal.html
@@ -77,7 +77,7 @@
         </div>
         <div class="thumbnail">
             <div class="thumbnail-content">
-                <a class="thumbnail-header" href="afvs">(A) video essay(s)</a>
+                <a class="thumbnail-header" href="essays">(A) video essay(s)</a>
                 <div class="thumbnail-description">
                     A list of possible video essays I might create (there has been a starting point and I want to do a lot more)!
                 </div>
