--- a/templates/fysemr.html
+++ b/templates/fysemr.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
     <div class="bio-container">
-        <a href="https://drive.google.com/uc?export=view&id=1HbtgJBMA1PF065dIGyaITdW0obwVOD39"><img src="https://drive.google.com/uc?export=view&id=1HbtgJBMA1PF065dIGyaITdW0obwVOD39" style="width: 500px; max-width: 100%; height: auto" title="Click for the larger version." /></a>
+        <iframe class="iframe" width="560" height="315" src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/view"></iframe>
         <div class="bio-text" style="text-align:left;">
             <h2 style="text-align:left;">The Land of Rivers</h2>
             <p>“Umi ni oite dai sakana nashi” (海に置いて大魚なし), 
@@ -17,12 +17,12 @@
         <div></div>
     </div>
     <div class="bio-container">
-        <image max-height="20vw" src="../static/asset/images/fish/fish outline.jpg"></image>
-        <image max-height="20vw" src="../static/asset/images/fish/no fish.jpg"></image>
+        <image height="300px" src="../static/asset/images/fish/fish outline.jpg"></image>
+        <image height="300px" src="../static/asset/images/fish/no fish.jpg"></image>
     </div>
     <div class="bio-container">
-        <image max-height="20vw" src="../static/asset/images/fish/no sub.jpg"></image>
-        <image max-height="20vw" src="../static/asset/images/fish/full.jpg"></image>
+        <image height="300px" src="../static/asset/images/fish/no sub.jpg"></image>
+        <image height="300px" src="../static/asset/images/fish/full.jpg"></image>
     </div>
 
 {% endblock %}
