--- a/templates/personal websites/illustration.html
+++ b/templates/personal websites/illustration.html
@@ -4,8 +4,7 @@
 
 {% block content %}
 <!--- Subnavigation page for displaying illustrations --->
-<script src="clickimage.js">
-</script>
+    <script src="{{ url_for('static', filename='clickimage.js') }}"></script>
 
     <div class="masonry">
 
